fixed building-app bug due to LocaTime.java